test/libsolidity/syntaxTests/denominations/deprecated_year_050.sol
pragma experimental "v0.5.0";
contract C {
	uint constant a = 3 years;
}
// ----
// TypeError: (62-69): Using "years" as a unit denomination is deprecated.
